# streamreg

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  api.py  pyproject.toml  pytest.ini  readme.md  transforms.py
docs/: .readthedocs.yaml  api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  modules.rst  output.rst  requirements.txt  usage.rst
estimators/: iv.py
examples/: ols_simulation.ipynb
src/streamreg/: __init__.py  api.py  data.py  demean.py  formula.py  means_store.py  output.py  results.py  transforms.py
src/streamreg/estimators/: __init__.py  iv.py  ols.py
tests/: __init__.py  conftest.py  test_clustering.py  test_integration.py  test_monte_carlo.py  test_ols.py  test_parallel.py  test_query.py  test_transforms.py
