[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamreg"
version = "0.1.0"
description = "Streaming Regression for Large Datasets"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Felix Schulz", email = "felix.schulz@unibas.ch"}
]
keywords = ["regression", "streaming", "online-learning", "econometrics", "2sls", "instrumental-variables"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyarrow>=6.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx_rtd_theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/felixschulz385/streamreg"
Documentation = "https://streamreg.readthedocs.io"
Repository = "https://github.com/felixschulz385/streamreg"

[tool.setuptools.packages.find]
where = ["src"]
include = ["streamreg*"]

[tool.setuptools.package-data]
streamreg = ["py.typed"]
